...
                                </constraints>
                                <fontDescription key="fontDescription" type="system" weight="thin" pointSize="30"/>
                                <state key="normal" title="START">
                                    <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
...
                        </userDefinedRuntimeAttributes>
                    </view>
                    <tabBarItem key="tabBarItem" title="Relax" image="MeditationIcon" id="Q5X-Dv-W3W"/>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="fon-Dj-5hi" sceneMemberID="firstResponder"/>
...
                                <items>
                                    <navigationItem id="CSM-9w-JoT">
                                        <barButtonItem key="leftBarButtonItem" title="Back" id="bX1-4N-itp">
                                            <connections>
                                                <action selector="close:" destination="AEa-u4-62L" id="KEC-er-G3c"/>
...
        <scene sceneID="0xC-dT-Crb">
            <objects>
                <viewController title="Profile" id="7By-DU-WqW" customClass="ProfileBarChartView" customModule="myTime" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="1Qk-HH-FOG" customClass="GradientView" customModule="myTime" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
        <scene sceneID="h7m-aF-VVz">
            <objects>
                <viewController title="JournalEntryView" id="BGw-hO-a53" customClass="JournalEntryView" customModule="myTime" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="CZS-lb-ula" customClass="GradientView" customModule="myTime" customModuleProvider="target">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                                </connections>
                                            </barButtonItem>
                                            <barButtonItem title="Mood" image="Mood3Medium" id="8lq-Pd-CSl">
                                                <connections>
                                                    <action selector="selectMood:" destination="BGw-hO-a53" id="dnP-TD-PDq"/>
...
        <scene sceneID="3F4-7T-Utd">
            <objects>
                <viewController storyboardIdentifier="moodOptionsViewController" title="MoodOptionView" modalTransitionStyle="crossDissolve" modalPresentationStyle="pageSheet" id="Mdz-es-aSj" customClass="MoodOptionView" customModule="myTime" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="aD9-3v-mW1">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
...
                                    <constraint firstAttribute="width" constant="40" id="ud4-vv-V7H"/>
                                </constraints>
                                <state key="normal" image="Mood4Happy"/>
                                <connections>
                                    <action selector="onHappyTapped:" destination="Mdz-es-aSj" eventType="touchUpInside" id="3Es-HJ-S8E"/>
...
                                    <constraint firstAttribute="height" constant="40" id="tSl-gx-Ce9"/>
                                </constraints>
                                <state key="normal" image="Mood1VSad"/>
                                <connections>
                                    <action selector="onVSadTapped:" destination="Mdz-es-aSj" eventType="touchUpInside" id="TQg-Ql-daH"/>
...
