...
            CloudStorage.shared.create(journalToSave: Journal.journal.entries)
            JournalContainer.saveContext()
            self.dismiss(animated: true, completion: nil)
            
        } else {
            // Alert the user that they haven't selected a mood
            let alert = UIAlertController(title: "Please select a mood", message: "How does this entry make you feel?", preferredStyle: .alert)
            let action = UIAlertAction(title: "Return", style: .default)
            alert.addAction(action)
            present(alert, animated: true, completion:nil)
        }
    }
}

...
