//
//  MeditationTests.swift
//  myTimeUITests
//
//  Created by Aaron on 23/9/19.
//  Copyright © 2019 RMIT. All rights reserved.
//

import Foundation

import XCTest

class MeditationTests: XCTestCase {
    
    override func setUp() {
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()
        
        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
    }
    
    func testExample() {

        let app = XCUIApplication()
        app.tabBars.buttons["Relax"].tap()
        app.buttons["START"].tap()
        app.children(matching: .window).element(boundBy: 0).children(matching: .other).element.children(matching: .other).element.tap()
        app.navigationBars.buttons["Back"].tap()
        
    } 

}
